extra space on right bug fixed

--- a/app/components/footer.scss
+++ b/app/components/footer.scss
@@ -15,6 +15,7 @@ footer {
     position: absolute;
     width: 100%;
     top: -8%;
+    left: 0;
   }
   p {
     font-size: 14px;
